--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>Akan Names</title>
+       <title>Akan Nameing</title>
        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
        <link rel="stylesheet" href="index.css">
 
