--- a/akan.html
+++ b/akan.html
@@ -16,7 +16,7 @@
     </header>
     <h1>Your Akan Names</h1>
     <p>You can check out your Akan name by simply keying in your data into the form below as requested and submit the data to see your Akan name.</p>
-    <h4>Refresh webpage after checking Akan Name in order to check again</h4>
+    <h4>Refresh webpage after checking Akan Name in order to check again!</h4>
 
     <div id="fom">
    <form id="data" onsubmit="return false">
