--- a/akan.html
+++ b/akan.html
@@ -14,7 +14,7 @@
             <a href="akan.html">Akan Name</a>
           </div>
     </header>
-    <h1>Your Akan Names</h1>
+    <h1>Your Akan</h1>
     <p>You can check out your Akan name by simply keying in your data into the form below as requested and submit the data to see your Akan name.</p>
     <h4>Refresh webpage after checking Akan Name in order to check again!</h4>
 
