--- a/akan.html
+++ b/akan.html
@@ -42,7 +42,7 @@
       </div>
       <div id="five">
         <button class="primary btn" onclick="akanNaming ()"> 
-            Check Akan Name
+            your Akan Name
         </button> 
       </div>
    </form>
